--- a/mo3adala-handasa/src/index.html
+++ b/mo3adala-handasa/src/index.html
@@ -2,14 +2,85 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8">
-  <!-- <title></title>ابلكيشن معادلة كلية هندسة</title> -->
+  <title>ابلكيشن معادلة كلية هندسة - أفضل منصة تعليمية للدبلوم الفني</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/assets/logo2.png">
+  <meta name="theme-color" content="#f97316">
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="ابلكيشن معادلة كلية هندسة - أفضل منصة تعليمية للدبلوم الفني للدخول لكلية الهندسة. دروس مبسطة، شرح واضح، أمثلة عملية، ومتابعة مستمرة">
+  <meta name="keywords" content="معادلة هندسة, كلية هندسة, دبلوم فني, تعليم هندسة, دروس رياضيات, فيزياء, كيمياء, ميكانيكا, إنجليزي, شرح مبسط">
+  <meta name="author" content="ابلكيشن معادلة كلية هندسة">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://appmo3adla.com/">
+  <meta property="og:title" content="ابلكيشن معادلة كلية هندسة - دايماً في ضهرك">
+  <meta property="og:description" content="أفضل منصة تعليمية للدبلوم الفني للدخول لكلية الهندسة. دروس مبسطة وشرح واضح">
+  <meta property="og:image" content="https://appmo3adla.com/assets/logo2.png">
+  <meta property="og:site_name" content="ابلكيشن معادلة كلية هندسة">
+  <meta property="og:locale" content="ar_EG">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://appmo3adla.com/">
+  <meta property="twitter:title" content="ابلكيشن معادلة كلية هندسة">
+  <meta property="twitter:description" content="أفضل منصة تعليمية للدبلوم الفني للدخول لكلية الهندسة">
+  <meta property="twitter:image" content="https://appmo3adla.com/assets/logo2.png">
+  
+  <!-- Additional SEO -->
+  <meta name="application-name" content="ابلكيشن معادلة كلية هندسة">
+  <meta name="msapplication-TileColor" content="#f97316">
+  <meta name="msapplication-TileImage" content="/assets/logo2.png">
+  <link rel="canonical" href="https://appmo3adla.com/">
+  <link rel="icon" type="image/x-icon" href="assets/logo2.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800;900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800;900&display=swap"></noscript>
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+  <link rel="dns-prefetch" href="//www.youtube.com">
+  
+  <!-- PERFORMANCE OPTIMIZATIONS -->
+  <link rel="preload" href="/assets/logo2.png" as="image" type="image/png">
+  <link rel="preload" href="/assets/teacher.png" as="image" type="image/png">
+  <link rel="preload" href="/assets/teacher1.png" as="image" type="image/png">
+  <link rel="preload" href="/assets/teacher2.png" as="image" type="image/png">
+  <link rel="preload" href="/assets/teacher3.png" as="image" type="image/png">
+  <link rel="preload" href="/assets/teacher4.png" as="image" type="image/png">
+  
+  <!-- DNS Prefetch for external resources -->
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+  
+  <!-- Resource hints for faster loading -->
+  <meta name="format-detection" content="telephone=no">
+  <meta name="theme-color" content="#ea580c">
+  
+  <!-- Critical CSS for faster rendering -->
+  <style>
+    body { font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
+    app-root { display: block; min-height: 100vh; }
+    .loading { display: flex; justify-content: center; align-items: center; height: 100vh; }
+  </style>
+  
   <script defer src="/env.js"></script>
+  
+  <script>
+    // Register Service Worker for performance
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js')
+          .then(registration => {
+            console.log('SW registered: ', registration);
+          })
+          .catch(registrationError => {
+            console.log('SW registration failed: ', registrationError);
+          });
+      });
+    }
+  </script>
 </head>
 <body>
   <app-root></app-root>
