--- a/mo3adala-handasa/src/index.html
+++ b/mo3adala-handasa/src/index.html
@@ -33,7 +33,7 @@
   <meta name="msapplication-TileColor" content="#f97316">
   <meta name="msapplication-TileImage" content="/assets/logo2.png">
   <link rel="canonical" href="https://appmo3adla.com/">
-  <link rel="icon" type="image/x-icon" href="assets/logo2.png">
+  <link rel="icon" type="image/x-icon" href="assets/logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800;900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
